# ocean

./: .gitignore  ;a  Cargo.toml  README.md  build.sh
.github/workflows/: release.yml
presets/: WOAH.json  balanced.json  big_waves.json  calm.json  calm2.json  deep_blue_cinematic.json  default.json  default2.json  experiment.json  golden_hour.json  midnight.json  rogue.json  screenshot1.json  storm.json  storm3.json  test.json  test_better.json  tropical.json
src/: camera.rs  debug.wgsl  fft.rs  fft.wgsl  foam.rs  lib.rs  main.rs  settings.rs  shader.wgsl  skybox.rs  skybox.wgsl  state.rs  texture.rs  ui.rs  vertex.rs  wave.rs
src/camera/: controller.rs  instance.rs  mod.rs  uniform.rs
src/fft/: cascade.rs  cascade.wgsl  compute.rs  compute.wgsl  mod.rs
src/foam/: foam.rs  foam.wgsl  mod.rs
src/pipeline/: render.wgsl  state.rs
src/settings/: builder.rs  mod.rs  presets.rs  uniform.rs
src/shaders/: combine.wgsl  fft.wgsl  foam.wgsl  render.wgsl  skybox.wgsl
src/skybox/: skybox.rs  skybox.wgsl
src/texture/: instance.rs
src/ui/: debug.rs  mod.rs  render.rs  widgets.rs
src/vertex/: vertex.rs
