[package]
name = "ocean"
description = "PBR + SSS + Foam + Lighting..."
version = "0.1.7"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
bytemuck = { version = "1.24.0", features = ["derive"] }
cgmath = "0.18.0"
env_logger = "0.11.8"
log = "0.4.28"
pollster = "0.4.0"
rand = "0.9.2"
wgpu = "27.0.0"
winit = "0.30.12"
wgpu_text = "27.0.1"
rand_distr = "0.5.1"
chrono = "0.4.42"
sysinfo = "0.37.2"
futures = "0.3.31"

[dependencies.image]
version = "0.25.8"
default-features = false
features = ["png", "jpeg"]
